GNOME Bugzilla – Bug 774702
dashdemux: Fix leak in gst_dash_demux_stream_free
Last modified: 2016-11-24 11:43:04 UTC
Free parsed moof and sync samples with _stream_free().
Created attachment 340286 [details] [review] dashdemux: Fix leak in gst_dash_demux_stream_free
Attachment 340286 [details] pushed as 2b44392 - dashdemux: Fix leak in gst_dash_demux_stream_free