dashdemux: Fix leak in gst_dash_demux_stream_free

Free parsed moof and sync samples with _stream_free().

https://bugzilla.gnome.org/show_bug.cgi?id=774702